@@ -24,6 +24,10 @@ NOTE: The dashboard has known display issues in Internet Explorer 6.
 build loop
 ======================
 
+Project
+----------------------
+* Added a property named "buildforced" that will get passed to builders for conditional control (CC-653). Patch by Dave Kilroy.
+
 UCM
 ----------------------
 * Fixed ClearCase/UCM mode when rmver event found in history (CC-660). Patch by Paul Heaberlin.
